--- a/index.html
+++ b/index.html
@@ -2,11 +2,14 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>New Project</title>
-	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<title>Antik Quiz</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-
+<section>
+    
+    
+</section>
 
 
 
