--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 </head>
 <body>
 <section>
+    <div id=rectangle>
+    <p id=question> Er Hades konge af dødsriget?</p>
+    </div>
     
     
 </section>
