--- a/index.html
+++ b/index.html
@@ -11,16 +11,18 @@
 
 
     <section>
-        <div id=rectangle>
-            <p id=question> Er Hades konge af dødsriget?</p>
+        <div id="rectangle">
+            <p id="question"> Er Hades konge af dødsriget?</p>
         </div>
 
     </section>
 
-
-    <p>
-
+<section>
+    <p id="question">
+Hvad hed Herakles' far? 
     </p>
+</section>
+   
 
 
     <section>
