--- a/index.html
+++ b/index.html
@@ -18,9 +18,11 @@
     </section>
 
 <section>
+    <div id="rectangle">
     <p id="question">
 Hvad hed Herakles' far? 
     </p>
+    </div>
 </section>
    
 
