--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
         <div id="rectangle">
             <p id="question"> Er Hades konge af dødsriget?</p>
         </div>
+        
+        <button id="button">
+        
+        </button>
 
     </section>
 
