--- a/index.html
+++ b/index.html
@@ -31,6 +31,13 @@
         </button>
     </div>
 
+    <h2>QUIZZEN BEGYNDER:</h2>
+
+<button type="button"
+onclick="document.getElementById('demo').innerHTML = Date()">
+KLIK FOR AT VISE HVORNÅR.</button>
+
+<p id="demo"></p>
 
 
 </body>
