--- a/index.html
+++ b/index.html
@@ -31,13 +31,29 @@
         </button>
     </div>
 
-    <h2>QUIZZEN BEGYNDER:</h2>
 
-<button type="button"
-onclick="document.getElementById('demo').innerHTML = Date()">
-KLIK FOR AT VISE HVORNÅR.</button>
-
-<p id="demo"></p>
+<h1>Countdown</h1>
+<div id="ccl">
+  <div>
+    <span class="days"></span>
+    <div class="smalltext">Days</div>
+  </div>
+  <div>
+    <span class="hours"></span>
+    <div class="smalltext">Hours</div>
+  </div>
+  <div>
+    <span class="minutes"></span>
+    <div class="smalltext">Minutes</div>
+  </div>
+  <div>
+    <span class="seconds"></span>
+    <div class="smalltext">Seconds</div>
+  </div>
+</div>
+<div id="finish">
+  <div class="finish-div">Finished!</div>
+</div>
 
 
 </body>
